--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chinese-ts",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "",
   "type": "module",
   "main": "./dist/index.umd.js",
@@ -50,9 +50,7 @@
     "vite-plugin-dts": "^3.3.1",
     "vitepress": "1.1.0",
     "vitest": "^1.5.0",
-    "vue": "^3.3.4"
-  },
-  "dependencies": {
+    "vue": "^3.3.4",
     "js-calendar-converter": "^0.0.6"
   }
 }
