--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chinese-ts",
-  "version": "1.1.2",
+  "name": "chinese-kit",
+  "version": "0.0.0",
   "description": "",
   "type": "module",
   "main": "./dist/index.cjs",
@@ -25,9 +25,9 @@
   "keywords": [
     "javascript library"
   ],
-  "homepage": "https://github.com/hacxy/chinese-ts",
+  "homepage": "https://github.com/hacxy/chinese-kit",
   "bugs": {
-    "url": "https://github.com/hacxy/chinese-ts/issues"
+    "url": "https://github.com/hacxy/chinese-kit/issues"
   },
   "author": "",
   "license": "MIT",
