chore: update config and docs

--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   "keywords": [
     "javascript library"
   ],
-  "homepage": "https://github.com/hacxy/chinese-kit",
+  "homepage": "https://github.com/hacxy/chinese-kits",
   "bugs": {
-    "url": "https://github.com/hacxy/chinese-kit/issues"
+    "url": "https://github.com/hacxy/chinese-kits/issues"
   },
   "author": "",
   "license": "MIT",
