--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,8 +1,9 @@
-name: DeployDocs # Actions名称
+name: DeployDocs
 on:
-  push: # 监听调用时机为push事件
-    branches: ['main']
-
+  push:
+    tags:
+      - 'v*'
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest # runs-on 指定job任务运行所需要的虚拟机环境(必填字段)
